--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\SAMSUNG_\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/joseguerrero/Library/Application Support/NetBeans/8.0.2/build.properties
